WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149212
[EFL] Fix the help message of separated web process option of MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=149212
Summary
[EFL] Fix the help message of separated web process option of MiniBrowser
Csaba Osztrogonác
Reported
2015-09-16 04:02:29 PDT
http://trac.webkit.org/changeset/166639
added the separated web process option to EFL's MiniBrowser which is false by default, but the help message says it is true by default. static Eina_Bool separated_process_enabled = EINA_FALSE; vs ECORE_GETOPT_STORE_DEF_BOOL('S', "separate-process", "Create new window in separated web process.", EINA_TRUE)
Attachments
Patch
(1.34 KB, patch)
2015-09-16 04:03 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-09-16 04:03:15 PDT
Created
attachment 261303
[details]
Patch
Gyuyoung Kim
Comment 2
2015-09-16 05:02:17 PDT
Comment on
attachment 261303
[details]
Patch r=me.
WebKit Commit Bot
Comment 3
2015-09-16 05:48:53 PDT
Comment on
attachment 261303
[details]
Patch Clearing flags on attachment: 261303 Committed
r189861
: <
http://trac.webkit.org/changeset/189861
>
WebKit Commit Bot
Comment 4
2015-09-16 05:48:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug