[EFL] Fix the help message of separated web process option of MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=149212

Reviewed by Gyuyoung Kim.

* MiniBrowser/efl/main.c:


Canonical link: https://commits.webkit.org/167314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189861 268f45cc-cd09-0410-ab3c-d52691b4dbfc